fix: Conferia dark mode titles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3188,3 +3188,7 @@ details summary {
 h3.cf-event-title {
   line-height: 120%; /* Reset conferia title line height */
 }
+
+dialog.conferia-dialog strong.presentation-title, dialog.conferia-dialog .cf-event-title {
+  color: inherit;
+}
